--- a/Config.ini
+++ b/Config.ini
@@ -16,6 +16,7 @@ freeProxyFourth = 1
 freeProxyFifth  = 1
 freeProxySixth = 1
 freeProxySeventh = 1
+freeProxyEighth = 1
 
 [HOST]
 ; API接口配置 http://127.0.0.1:5051
